# HabitFlow.Blazor/Generated/Api/HabitFlowApiClient.cs
@@ -112,11 +112,11 @@ namespace HabitFlow.Client
         System.Threading.Tasks.Task<HabitResponse> GetHabitAsync(int id, System.Threading.CancellationToken cancellationToken);
 
         /// <exception cref="ApiException">A server side error occurred.</exception>
-        System.Threading.Tasks.Task<HabitResponse> UpdateHabitAsync(int id, UpdateHabitRequest request);
+        System.Threading.Tasks.Task<object> UpdateHabitAsync(int id, UpdateHabitRequest request);
 
         /// <param name="cancellationToken">A cancellation token that can be used by other objects or threads to receive notice of cancellation.</param>
         /// <exception cref="ApiException">A server side error occurred.</exception>
-        System.Threading.Tasks.Task<HabitResponse> UpdateHabitAsync(int id, UpdateHabitRequest request, System.Threading.CancellationToken cancellationToken);
+        System.Threading.Tasks.Task<object> UpdateHabitAsync(int id, UpdateHabitRequest request, System.Threading.CancellationToken cancellationToken);
 
         /// <exception cref="ApiException">A server side error occurred.</exception>
         System.Threading.Tasks.Task DeleteHabitAsync(int id);
@@ -1342,14 +1342,14 @@ namespace HabitFlow.Client
         }
 
         /// <exception cref="ApiException">A server side error occurred.</exception>
-        public virtual System.Threading.Tasks.Task<HabitResponse> UpdateHabitAsync(int id, UpdateHabitRequest request)
+        public virtual System.Threading.Tasks.Task<object> UpdateHabitAsync(int id, UpdateHabitRequest request)
         {
             return UpdateHabitAsync(id, request, System.Threading.CancellationToken.None);
         }
 
         /// <param name="cancellationToken">A cancellation token that can be used by other objects or threads to receive notice of cancellation.</param>
         /// <exception cref="ApiException">A server side error occurred.</exception>
-        public virtual async System.Threading.Tasks.Task<HabitResponse> UpdateHabitAsync(int id, UpdateHabitRequest request, System.Threading.CancellationToken cancellationToken)
+        public virtual async System.Threading.Tasks.Task<object> UpdateHabitAsync(int id, UpdateHabitRequest request, System.Threading.CancellationToken cancellationToken)
         {
             if (id == null)
                 throw new System.ArgumentNullException("id");
@@ -1401,7 +1401,7 @@ namespace HabitFlow.Client
                         var status_ = (int)response_.StatusCode;
                         if (status_ == 200)
                         {
-                            var objectResponse_ = await ReadObjectResponseAsync<HabitResponse>(response_, headers_, cancellationToken).ConfigureAwait(false);
+                            var objectResponse_ = await ReadObjectResponseAsync<object>(response_, headers_, cancellationToken).ConfigureAwait(false);
                             if (objectResponse_.Object == null)
                             {
                                 throw new ApiException("Response was null which was not expected.", status_, objectResponse_.Text, headers_, null);
@@ -2745,13 +2745,13 @@ namespace HabitFlow.Client
         public string? Description { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("type")]
-        public int? Type { get; set; } = default!;
+        public byte? Type { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("completionMode")]
-        public int? CompletionMode { get; set; } = default!;
+        public byte? CompletionMode { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("daysOfWeekMask")]
-        public int? DaysOfWeekMask { get; set; } = default!;
+        public byte? DaysOfWeekMask { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("targetValue")]
         public int? TargetValue { get; set; } = default!;
@@ -2762,6 +2762,9 @@ namespace HabitFlow.Client
         [System.Text.Json.Serialization.JsonPropertyName("deadlineDate")]
         [System.Text.Json.Serialization.JsonConverter(typeof(DateFormatConverter))]
         public System.DateTimeOffset? DeadlineDate { get; set; } = default!;
+
+        [System.Text.Json.Serialization.JsonPropertyName("clearDeadline")]
+        public bool? ClearDeadline { get; set; } = default!;
 
     }
 
